@@ -16,16 +16,17 @@
  */
 package org.apache.kafka.common.security.scram;
 
+import org.apache.kafka.common.annotation.InterfaceAudience;
 import org.apache.kafka.common.security.scram.internals.ScramSaslClientProvider;
 import org.apache.kafka.common.security.scram.internals.ScramSaslServerProvider;
 
-import java.util.Collections;
 import java.util.Map;
 
 import javax.security.auth.Subject;
 import javax.security.auth.callback.CallbackHandler;
 import javax.security.auth.spi.LoginModule;
 
+@InterfaceAudience.Public
 public class ScramLoginModule implements LoginModule {
 
     private static final String USERNAME_CONFIG = "username";
@@ -48,7 +49,7 @@ public class ScramLoginModule implements LoginModule {
 
         boolean useTokenAuthentication = "true".equalsIgnoreCase((String) options.get(TOKEN_AUTH_CONFIG));
         if (useTokenAuthentication) {
-            Map<String, String> scramExtensions = Collections.singletonMap(TOKEN_AUTH_CONFIG, "true");
+            Map<String, String> scramExtensions = Map.of(TOKEN_AUTH_CONFIG, "true");
             subject.getPublicCredentials().add(scramExtensions);
         }
     }
